--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <a href="#">Contactos</a>
     </nav>
     <main>
+        <section>
+            <h2>Modelo de caja</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente rem dolore accusantium incidunt nemo accusamus reprehenderit enim quos minima?</p>
+            <div class="imagen">
+                <img src="Imagen/gato.jpg" alt="Gato">
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, recusandae.</p>
+        </section>
 
     </main>
     <footer>
