--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="Imagen/gato.jpg" alt="">
+        </div>
         <h1>Explicaciòn modelo de caja y especificidad</h1>
     </header>
     <nav>
@@ -17,14 +20,25 @@
     </nav>
     <main>
         <section>
-            <h2>Modelo de caja</h2>
+            <h2 style="color: crimson">Modelo de caja</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sapiente rem dolore accusantium incidunt nemo accusamus reprehenderit enim quos minima?</p>
             <div class="imagen">
                 <img src="Imagen/gato.jpg" alt="Gato">
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, recusandae.</p>
         </section>
-
+        <h2>Titulo h2 sin section</h2>
+        <p class="color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ullam illum placeat autem quis assumenda ea officiis culpa debitis expedita nobis cupiditate repellat omnis minima, sit fugiat nemo molestias! Repellendus quis corporis vel porro deserunt nam unde, et tempora, ex numquam nemo iure culpa. Perferendis suscipit voluptates quod! Enim, alias.</p>
+        <section>
+            <h2>Titulo h2 dentro del section</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ducimus pariatur cum facilis voluptatibus eum dolore enim, amet laudantium ipsa porro. Neque saepe doloremque assumenda temporibus similique inventore dolorum veniam repellat atque delectus ad labore, quo placeat unde velit. Quidem porro quaerat maiores sed neque assumenda dolores magni earum tempora minima illo labore officia, esse aperiam ipsa voluptates, doloremque temporibus.</p>
+        </section>
+        <h2>display en bloque</h2>
+        <div class="bloque">
+            <img src="Imagen/gato.jpg" alt="">
+            <img src="Imagen/gato.jpg" alt="">
+        </div>
+        <hr>
     </main>
     <footer>
         <p>Diego Fernando Delgado Vergara</p>
